third_party/move/move-compiler/tests/move_check/inlining/break_continue_in_lambda.exp
error[E04014]: invalid loop control
  ┌─ tests/move_check/inlining/break_continue_in_lambda.move:3:9
  │
3 │         break;
  │         ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body

error[E04014]: invalid loop control
   ┌─ tests/move_check/inlining/break_continue_in_lambda.move:50:2
   │
50 │     break;
   │     ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body

error[E04014]: invalid loop control
   ┌─ tests/move_check/inlining/break_continue_in_lambda.move:54:2
   │
54 │     continue;
   │     ^^^^^^^^ Invalid usage of 'continue'. 'continue' can only be used inside a loop body

